--- a/psalmtox music institute/style.css
+++ b/psalmtox music institute/style.css
@@ -88,6 +88,133 @@ nav img {
 nav .fa {
   display: none;
 }
+
+.course {
+  background-color: rgb(240, 212, 143); /* Change this to the color you desire */
+  padding: 20px; /* Optional: Adjust padding as needed */
+  margin-bottom: 20px; /* Optional: Adjust margin as needed */
+}
+
+.facilities{
+  background-color: rgb(240, 212, 143); /* Change this to the color you desire */
+  padding: 20px; /* Optional: Adjust padding as needed */
+  margin-bottom: 20px; /* Optional: Adjust margin as needed */
+
+}
+
+footer
+{
+	padding: 8vw;
+	background-color: rgb(207, 191, 101);
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+
+footer .footer-col
+{
+	padding-bottom: 40px;
+}
+
+footer h3
+{
+	color: rgb(241, 240, 245);
+	font-weight: 600;
+	padding-bottom: 20px;
+}
+
+footer li
+{
+	list-style: none;
+	color: black;
+	padding: 10px 0;
+	font-size: 15px;
+	cursor: pointer;
+	transition: 0.3s ease;
+}
+
+footer li:hover
+{
+	color: rgb(241, 240, 245);
+}
+
+footer p
+{
+	color: #7b838a;
+}
+
+footer .subscribe
+{
+	margin-top: 20px;
+}
+
+footer input
+{
+	width: 220px;
+	padding: 15px 12px;
+	background: #334F6C;
+	border: none;
+	outline: none;
+	color: #fff;
+}
+
+footer .subscribe a
+{
+	text-decoration: none;
+	font-size: 0.9rem;
+	padding: 12px 15px;
+	background-color: #fff;
+	font-weight: 600;
+}
+
+footer .subscribe a.yellow
+{
+	color: #fff;
+	background: #fdc93b;
+	transition: 0.3s ease;
+}
+
+footer .subscribe a.yellow:hover
+{
+	color: red;
+	background: #fff;
+}
+
+footer .copyright
+{
+	margin-top: 20px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+footer .copyright p, footer .copyright p > a
+{
+	color: #fff;
+	text-decoration: none;
+}
+
+footer .copyright .pro-links
+{
+	margin-top: 0px;
+}
+
+footer .copyright .pro-links i
+{
+	background-color: white;
+	color: rgb(8, 8, 36);
+}
+
+footer .copyright .pro-links i:hover
+{
+	background: #fdc93b;
+	color: #2c2c2c;
+}
+
+
 @media (max-width: 700px) {
   .text-box h1 {
     font-size: 20px;
