--- a/style.css
+++ b/style.css
@@ -4,6 +4,29 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.advertisement {
+  width: 200px; /* Adjust the size as needed */
+  height: 200px; /* Adjust the size as needed */
+  overflow: hidden;
+  position: relative;
+}
+
+.animated-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  animation: fadeInOut 10s infinite;
+}
+
+@keyframes fadeInOut {
+  0% { opacity: 0; }
+  10% { opacity: 1; }
+  30% { opacity: 1; }
+  40% { opacity: 0; }
+  100% { opacity: 0; }
+}
 .header {
   min-height: 100vh;
   width: 100%;
@@ -20,6 +43,48 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-toggle {
+  padding: 10px 16px;
+  text-decoration: none;
+  color: black;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: goldenrod;  /* Background color set to goldenrod */
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 10px;
+  list-style: none;
+}
+
+.dropdown-menu li a {
+  color: black;
+  text-decoration: none;
+  padding: 5px 10px;
+  display: block;
+}
+
+.dropdown-menu li a:hover {
+  background-color: gray;
+}
+
+.hidden {
+  display: none;
+}
+
+
 nav img {
   width: 150px;
 }
@@ -78,10 +143,43 @@ nav img {
   background-color: transparent;
   position: relative;
   cursor: pointer;
+  border-radius: 5px;
+}
+
+.hero-btn2 {
+  display: inline-block;
+  text-decoration: none;
+  color: rgb(129, 49, 49);
+  border: 1px solid red;
+  padding: 12px 34px;
+  font-size: 13px;
+  background-color: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.apply a {
+  color: white;
+  background-color: red;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.apply a:hover {
+  background-color: blue;
+}
+
+
+.hero-btn2:hover {
+  border: 1px solid white;
+  background: red;
+  transition: 1s;
+  color: #fff;
 }
 .hero-btn:hover {
-  border: 1px solid goldenrod;
-  background: goldenrod;
+  border: 1px solid red;
+  border-radius: 5px;
+  background: red;
   transition: 1s;
   color: #fff;
 }
