--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
 .dropdown-menu, .dropdown-menu2 {
   display: none;
   position: absolute;
-  background: #fff;
+  background: #5e5858;
   color: #333;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   z-index: 1000;
+  text-align: left;
+  transition: opacity 0.9s ease;
 }
 
 .dropdown-menu {
@@ -57,7 +59,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  animation: fadeInOut 10s infinite;
+  animation: fadeInOut 20s infinite;
 }
 
 @keyframes fadeInOut {
@@ -72,6 +74,16 @@
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
     url(./images/thelonious-sphere-monk-1281515_1280.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+.header2 {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(./images/2148847022.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -103,7 +115,7 @@ nav {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: goldenrod;  /* Background color set to goldenrod */
+  background-color: rgb(63, 61, 61);  
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 10px;
   list-style: none;
@@ -761,3 +773,68 @@ footer */
     font-size: 14px; /* Increase font size for readability */
   }
 }
+
+.post1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.content {
+  display: flex;
+  max-width: 1200px;
+}
+
+.text-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.image-content {
+  flex: 0 0 350px; /* Adjust the width as needed */
+  padding: 20px;
+}
+
+.image-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.para {
+  text-align: justify;
+  font-size: 15px;
+}
+
+.hero-btn3 {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  background: #f44336;
+  padding: 10px 30px;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  margin-top: 75px;
+}
+
+.hero-btn3:hover {
+  transform: translateY(5px);
+}
+
+
+.hero-btn4 {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  background: green;
+  padding: 10px 30px;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  margin-top: 75px;
+}
+
+.hero-btn4:hover {
+  transform: translateY(5px);
+}
+
